Apply composite key
